--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -21,7 +21,7 @@ unclassified:
           scm:
             github:
               credentialsId: "cloudbees-ci-workshop-github-app"
-              repoOwner: "REPLACE_GITHUB_ORG"
+              repoOwner: "CloudBees-workshop-gaj"
               repository: "pipeline-library"
 credentials:
   system:
@@ -37,5 +37,5 @@ credentials:
           appID: "77562"
           description: "CloudBees CI Workshop GitHub App credential"
           id: "cloudbees-ci-workshop-github-app"
-          owner: "REPLACE_GITHUB_ORG"
+          owner: "CloudBees-workshop-gaj"
           privateKey: "${gitHubAppPrivateKey}"
